# TreeAgent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  spawn_rules.json
.github/workflows/: ci.yml
config/: spawn_rules.json
src/: agent_node.py  agent_orchestrator.py  cli.py  logging_utils.py
src/agentNodes/: __init__.py  base.py  base_node.py  clarifier.py  deployer.py  hld_designer.py  implementer.py  jury.py  lld_designer.py  researcher.py  reviewer.py  tester.py
src/agent_nodes/: hld_designer.py
src/cli/: __init__.py
src/dataBuilders/: __init__.py  prompt_builder.py
src/dataManagement/: __init__.py  project_manager.py
src/dataModel/: __init__.py  model.py  modelResponse.py  model_response.py  project.py  task.py  validation_result.py
src/litellm/: __init__.py
src/modelAccessors/: __init__.py  anthropic_accessor.py  base_accessor.py  gemini_accessor.py  huggingface_accessor.py  mock_accessor.py  openai_accessor.py
src/orchestrator/: __init__.py  orchestrator.py
src/search/: __init__.py  config.py  file_loader.py  semantic_indexer.py
src/tools/: __init__.py  env_tools.py  file_io.py  web_search.py
src/treeagent/: __init__.py
src/validators/: python_code_validator.py
tests/: conftest.py  test_agent_orchestrator.py  test_file_loader.py  test_mock_accessor.py  test_models.py  test_nodes_e2e.py  test_project_manager.py  test_semantic_indexer.py
tests/agentNodes/: test_clarifier.py  test_deployer.py  test_hld_designer.py  test_implementer.py  test_jury.py  test_lld_designer.py  test_researcher.py  test_reviewer.py  test_tester.py
tests/agent_nodes/: test_hld_designer.py  test_hld_designer_node.py
tests/nodes/: test_clarifier.py  test_deployer.py  test_hld_designer.py  test_lld_designer.py  test_researcher.py  test_tester.py
tests/tools/: test_env_tools.py  test_file_io.py  (+1 more)
(+4 files in other folders)
