[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tree-agent"
version = "0.1.0"
description = "AI Agent Tree Orchestrator"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
dependencies = [
    "pydantic>=2.0.0",
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src"]
